syntax = "proto3";
import "google/protobuf/timestamp.proto";

package matchingupload;


// Services
service UploadService {
  rpc UploadAvatar (UploadAvatarRequest) returns (UploadAvatarResponse);
}

service MatchingService {
  rpc RecordSwipe (RecordSwipeRequest) returns (RecordSwipeResponse);
  rpc SendFriendRequest (SendFriendRequestRequest) returns (SendFriendRequestResponse);
  rpc UpdateFriendRequestStatus (UpdateFriendRequestStatusRequest) returns (FriendRequest); 
  rpc GetFriendRequests(GetFriendRequestsRequest) returns (MyFriendRequestListResponse);
  rpc GetCurrentFriends(GetCurrentFriendRequest) returns (GetCurrentFriendsResponse);
}

message GetCurrentFriendRequest {
   string userId = 1;
}

message GetCurrentFriendsResponse {
	repeated User friends = 1;
	int32 total = 2; 
}

message GetFriendRequestsRequest {
  string userId = 1; // ID của user cần lấy request
  string status = 2;
}
message MyFriendRequestListResponse {
  repeated FriendRequest requests = 1;
}

// Messages
message UploadAvatarRequest {
  string userId = 1;
  bytes fileData = 2;
  string contentType = 3;
  string originalFileName = 4;
}

message UploadAvatarResponse {
  string url = 1;
}

message RecordSwipeRequest {
  string swiperId = 1;
  string swipedId = 2;
  string action = 3;
}

message RecordSwipeResponse {
  bool success = 1;
  bool match = 2;
}

message SendFriendRequestRequest {
  string senderId = 1;
  string receiverId = 2;
}

message SendFriendRequestResponse {
  bool success = 1;
  string message = 2;
}

message UpdateFriendRequestStatusRequest {
  string id = 1;
  string userId = 2;
  string newStatus = 3;
}

message FriendRequest {
  string id = 1;
  string senderId = 2;
  string receiverId = 3;
  string status = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string statusName = 7;
  string statusColor = 8;
  string statusCode = 9;
  User sendRequestPerson = 10;
}


message User {
  string id = 1;
  string email = 2;
  string emailVerificationCode = 3;
  bool isEmailVerified = 4;
  string resetPasswordCode = 5; 
  string firstName = 6;
  string lastName = 7;
  google.protobuf.Timestamp dateOfBirth = 8;
  string gender = 9;
  string location = 10;
  string bio = 11;
  string avatarUrl = 12;
  repeated string interests = 13;
  int32 minAgePreference = 14;
  int32 maxAgePreference = 15;
  string preferredGender = 16;
  repeated string activities = 17;
  google.protobuf.Timestamp createdAt = 18;
  google.protobuf.Timestamp updatedAt = 19;
  string username = 20;
}