import {
  BadRequestException,
  ConflictException,
  ForbiddenException,
  Injectable,
  NotFoundException,
} from '@nestjs/common';
import { Client, ClientGrpc, Transport } from '@nestjs/microservices';
import { join } from 'path';
import { lastValueFrom } from 'rxjs';
import {
  FriendRequestEntity,
  FriendRequestStatus,
  SwipeAction,
  SwipeEntity,
} from 'src/entities';
import { UserProfileServiceGrpc } from 'src/grpc';
import { toDict } from 'src/helpers';
import {
  FriendRequestRepository,
  SwipeRepository,
} from 'src/repositories/index.repository';
import { FriendRequest } from './dto/create-swipe.dto';
import { FriendRequestResponseDto } from './dto/fr-request-response.dto';

@Injectable()
export class MatchingService {
  @Client({
    transport: Transport.GRPC,
    options: {
      url: '0.0.0.0:50052',
      package: 'auth',
      protoPath: join(__dirname, '../../../../proto/auth.proto'),
    },
  })
  private readonly client: ClientGrpc;

  private userService: UserProfileServiceGrpc;

  onModuleInit() {
    this.userService =
      this.client.getService<UserProfileServiceGrpc>('UserProfileService');

    console.log(
      '[Mapped GRPC] userService methods:',
      Object.keys(this.userService),
    );
  }
  constructor(
    private readonly swipeRepository: SwipeRepository,
    private readonly friendRequestRepository: FriendRequestRepository,
    // @Inject('AUTH_SERVICE') private readonly authClient: ClientProxy, // N·∫øu c·∫ßn g·ªçi auth service
  ) {}

  async recordSwipe(
    swiperId: string,
    swipedId: string,
    action: SwipeAction,
  ): Promise<{ match: boolean }> {
    if (swiperId === swipedId) {
      throw new BadRequestException('Cannot swipe on yourself.');
    }

    // Ki·ªÉm tra xem ƒë√£ t·ªìn t·∫°i swipe t·ª´ swiperId ƒë·∫øn swipedId ch∆∞a
    const existingSwipe = await this.swipeRepository.findOne({
      where: { swiperId: swiperId, swipedId },
    });

    if (existingSwipe) {
      // N·∫øu ƒë√£ swipe, c·∫≠p nh·∫≠t h√†nh ƒë·ªông
      existingSwipe.action = SwipeAction[action];
      await this.swipeRepository.save(existingSwipe);
    } else {
      // T·∫°o swipe m·ªõi
      const newSwipe = new SwipeEntity();
      newSwipe.swiperId = swiperId;
      newSwipe.swipedId = swipedId;
      newSwipe.action = action;
      await this.swipeRepository.insert(newSwipe);
    }

    let match = false;
    if (action === SwipeAction.LIKE) {
      // Ki·ªÉm tra xem ng∆∞·ªùi b·ªã vu·ªët ƒë√£ "like" l·∫°i ng∆∞·ªùi vu·ªët ch∆∞a
      const reverseSwipe = await this.swipeRepository.findOne({
        where: {
          swiperId: swipedId,
          swipedId: swiperId,
          action: SwipeAction.LIKE,
        },
      });

      if (reverseSwipe) {
        match = true;
        // TODO: G·ª≠i th√¥ng b√°o match ƒë·∫øn c·∫£ hai ng∆∞·ªùi d√πng (th√¥ng qua Notification Service)
        // TODO: T·∫°o m·ªôt cu·ªôc tr√≤ chuy·ªán m·ªõi (Chat Service)
        console.log(`üéâ MATCH! ${swiperId} and ${swipedId}`);
      }
    }
    return { match };
  }

  async sendFriendRequest(
    senderId: string,
    receiverId: string,
  ): Promise<FriendRequestEntity> {
    if (senderId === receiverId) {
      throw new BadRequestException('Cannot send friend request to yourself.');
    }

    // Ki·ªÉm tra xem ƒë√£ c√≥ y√™u c·∫ßu k·∫øt b·∫°n ƒëang ch·ªù x·ª≠ l√Ω ho·∫∑c ƒë√£ l√† b·∫°n b√® ch∆∞a
    const existingRequest = await this.friendRequestRepository.findOne({
      where: [
        { senderId, receiverId, status: FriendRequestStatus.PENDING },
        {
          senderId: receiverId,
          receiverId: senderId,
          status: FriendRequestStatus.PENDING,
        },
        { senderId, receiverId, status: FriendRequestStatus.ACCEPTED },
        {
          senderId: receiverId,
          receiverId: senderId,
          status: FriendRequestStatus.ACCEPTED,
        },
      ],
    });

    if (existingRequest) {
      if (existingRequest.status === FriendRequestStatus.PENDING) {
        throw new ConflictException('Friend request already pending.');
      } else if (existingRequest.status === FriendRequestStatus.ACCEPTED) {
        throw new ConflictException('Already friends.');
      }
    }

    const friendRequest = this.friendRequestRepository.create({
      senderId,
      receiverId,
      status: FriendRequestStatus.PENDING,
    });

    // TODO: G·ª≠i th√¥ng b√°o y√™u c·∫ßu k·∫øt b·∫°n ƒë·∫øn ng∆∞·ªùi nh·∫≠n (th√¥ng qua Notification Service)
    return this.friendRequestRepository.save(friendRequest);
  }

  // B·∫°n c√≥ th·ªÉ th√™m c√°c ph∆∞∆°ng th·ª©c kh√°c nh∆∞ acceptFriendRequest, rejectFriendRequest
  async acceptFriendRequest(
    requestId: string,
    userId: string,
  ): Promise<FriendRequestEntity> {
    const request = await this.friendRequestRepository.findOne({
      where: { id: requestId },
    });
    if (!request) {
      throw new NotFoundException('Friend request not found.');
    }
    if (request.receiverId !== userId) {
      throw new ForbiddenException(
        'You are not authorized to accept this request.',
      );
    }
    if (request.status !== FriendRequestStatus.PENDING) {
      throw new BadRequestException('Friend request is not in pending status.');
    }

    request.status = FriendRequestStatus.ACCEPTED;
    // TODO: G·ª≠i th√¥ng b√°o ƒë√£ ch·∫•p nh·∫≠n k·∫øt b·∫°n ƒë·∫øn ng∆∞·ªùi g·ª≠i
    return this.friendRequestRepository.save(request);
  }

  async rejectFriendRequest(
    requestId: string,
    userId: string,
  ): Promise<FriendRequest> {
    const request = await this.friendRequestRepository.findOne({
      where: { id: requestId },
    });
    if (!request) {
      throw new NotFoundException('Friend request not found.');
    }
    if (request.receiverId !== userId) {
      throw new ForbiddenException(
        'You are not authorized to reject this request.',
      );
    }
    if (request.status !== FriendRequestStatus.PENDING) {
      throw new BadRequestException('Friend request is not in pending status.');
    }

    request.status = FriendRequestStatus.REJECTED;
    // TODO: G·ª≠i th√¥ng b√°o ƒë√£ t·ª´ ch·ªëi k·∫øt b·∫°n ƒë·∫øn ng∆∞·ªùi g·ª≠i
    return this.friendRequestRepository.save(request);
  }

  /** get my friends request list */
  async getFriendRequests(data: {
    userId: string;
    status: any;
  }): Promise<FriendRequestResponseDto> {
    const result: any = await this.friendRequestRepository.find({
      where: { receiverId: data.userId, status: data.status },
    });

    const userIds = result.map((request) => request.senderId);

    const users = await lastValueFrom(
      this.userService.getListUsersByIds({
        userIds: userIds,
      }),
    ).then((res) => {
      return res.users;
    });

    const dictUserById = toDict(users || [], 'id');

    for (const request of result) {
      request.sendRequestPerson = dictUserById[request.senderId];
    }

    return {
      requests: result || [],
    };
  }
}
